--- a/css/estilos.css
+++ b/css/estilos.css
@@ -330,3 +330,40 @@ textarea {
 .print {
     height: 35rem;
 }
+
+
+/**Login**/
+
+.login {
+    color: var(--letra);
+    border: 4px solid black;
+    max-width: 300px;
+    margin: 200px auto;
+    padding: 30px;
+    box-shadow: 0 0 40px var(--colorCorreo);
+}
+
+.credenciales h2 {
+    text-transform: uppercase;
+}
+
+.credenciales label {
+    text-transform: uppercase;
+    margin-top: 5px;
+}
+
+.credenciales input {
+    margin-bottom: 10px;
+}
+
+.btn {
+    padding: 10px;
+    text-transform: uppercase;
+    font-family: var(--fuente);
+    color: var(--letra);
+}
+
+.btn:hover {
+    cursor: pointer;
+    color: white;
+}
